--- a/Clipboard2WebSearch/app/src/main/res/values/strings.xml
+++ b/Clipboard2WebSearch/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Clipboard2WebSearch</string>
+    <string name="search">Search</string>
+    <string name="searchmyclipboard">Search my Clipboard</string>
 </resources>
